# ME-Noticeboard

./: .gitignore  app.py  pyproject.toml  readme.md  web.config
static/: admin.js  clock.js  noticeboard.js  noticeboard_one_campus.js  noticeboard_secondary.js  style.css
templates/: admin.html  index.html  one_campus.html  secondary.html
