[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Manage-Engine_ServiceDeskyout_Noticeboard"
version = "1.1.2"
authors = [
    { name="Robert Coleman", email="robert.coleman@minivoid.net},
]
description = "A customer facing noticeboard for Manage Enginge's Service Desk Plus"
readme = "readme.md"
requires-python = ">=3.7"
dependencies = [
    "flask",
    "requests",
    "os",
    "configparser",
    "markupsafe",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Scobbo/ME-Noticeboard"
"Bug Tracker" = "https://github.com/Scobbo/ME-Noticeboard/issues"